--- a/mythtv/html/tv/css/guide.css
+++ b/mythtv/html/tv/css/guide.css
@@ -174,6 +174,7 @@
 .guideGrid .channelIcon
 {
     height: 57px;
+    max-width: 86px;
     margin-left: 4px;
     margin-bottom: 3px;
     overflow: hidden;
