WebFrontend: Add support for XSPF playlist format (More metadata than m3u8 and asx)

--- a/mythtv/html/tv/css/common.css
+++ b/mythtv/html/tv/css/common.css
@@ -141,6 +141,18 @@ BODY
     display: none;
 }
 
+.contextMenu .button A
+{
+    color: #FFFFFF;
+    text-decoration: none;
+}
+
+.contextMenu .button A:visited
+{
+    color: #FFFFFF;
+    text-decoration: none;
+}
+
 .contextMenu .button:hover
 {
     background-color: #003147;
