--- a/mythtv/html/css/site.css
+++ b/mythtv/html/css/site.css
@@ -228,10 +228,30 @@
     #header_login {
         float: right;
         margin-right: 10px;
+        margin-top: 9px;
     }
 
     #session_username {
         font-weight: bold;
+    }
+
+    #session_logout {
+        font-size: 0.9em;
+        color: #FFFFFF;
+    }
+
+    #session_logout A {
+        text-decoration: none;
+        color: #FFFFFF;
+    }
+
+    #session_logout A:hover {
+        text-decoration: underline;
+        color: #FFFFFF;
+    }
+
+    #session_logout A:visited {
+        color: #FFFFFF;
     }
 
     #content {
